// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`About Page matches snapshot (dark mode) 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-nffr9a-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: none; --Paper-overlay: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular css-5p63oq-MuiToolbar-root"
      >
        <div>
          <a
            class="css-aw95pg"
            data-discover="true"
            href="/"
          >
            HRT
          </a>
        </div>
        <div
          class="MuiBox-root css-i9gxme"
        />
        <div
          class="MuiBox-root css-1b6rjoo"
        >
          <div
            class="css-19sk4h4"
          >
            <a
              class="css-125bzkn"
              data-discover="true"
              href="/about"
            >
              About
            </a>
          </div>
          <div
            class="css-19sk4h4"
          >
            <a
              class="css-125bzkn"
              data-discover="true"
              href="/blog"
            >
              Blog
            </a>
          </div>
          <div>
            <a
              class="css-omc921"
              data-discover="true"
              href="/#contact"
            >
              <span>
                Contact Me
              </span>
            </a>
          </div>
        </div>
      </div>
    </header>
    <section
      class="css-1oi1bvt"
      data-testid="about-hero"
    >
      <div
        class="MuiBox-root css-1hs42wd"
      >
        <div
          class="MuiBox-root css-19ieufy"
          variant="1"
        />
        <div
          class="MuiBox-root css-oyqht7"
          variant="2"
        />
        <div
          class="MuiBox-root css-1rht8gy"
          variant="3"
        />
      </div>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-8y1sfv-MuiContainer-root"
      >
        <div
          style="display: flex; flex-direction: column; align-items: center;"
          viewport="[object Object]"
          whileinview="visible"
        >
          <div
            class="MuiBox-root css-1qpzi1f"
          >
            <div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-dhsisw-MuiTypography-root"
              >
                About Me
              </p>
            </div>
            <div>
              <h1
                class="css-a0eunv"
              >
                Hi, I'm Hemanth. I design thoughtful digital experiences.
              </h1>
            </div>
            <div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-of8e2j-MuiTypography-root"
              >
                I’ve been fascinated by computers for as long as I can remember. What started as curiosity in a school computer lab—tinkering with HTML and exploring how websites work—quickly turned into a lifelong passion for building things with code. Over time, that curiosity grew from experimenting with small projects to developing production software and contributing to real-world products.
                <br />
                For me, software engineering is more than writing code. It’s a craft that combines problem-solving, empathy for users, and continuous learning. I enjoy building interfaces and systems that are intuitive, performant, and thoughtfully designed—products that people genuinely enjoy using.
                <br />
                <br />
                Driven by a childhood dream to work in technology, I’ve spent countless hours learning and improving my skills. Along the way I’ve worked with a variety of programming languages and technologies, including C, C++, Python, Java, and modern web development tools. These experiences have allowed me to build meaningful projects, collaborate with others, and grow as an engineer.
                <br />
                <br />
                When I’m not coding or exploring new technologies, you’ll probably find me playing football or cricket. Just like software development, these sports remind me that improvement comes through practice, persistence, and teamwork.
                <br />
                <br />
              </p>
            </div>
            <div>
              <div
                class="MuiBox-root css-euzpok"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-g4s3kp-MuiTypography-root"
                >
                  When I'm not coding, you'll find me buried in a book. I'm an avid reader — fiction, non-fiction, philosophy, you name it. I believe reading shapes how I think and build.
                </p>
                <a
                  data-discover="true"
                  href="/books"
                  style="color: inherit; text-decoration: none;"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body2 css-l9qnjn-MuiTypography-root"
                  >
                    My Reading List
                  </span>
                </a>
              </div>
            </div>
            <div
              class="MuiBox-root css-1vamrj8"
              data-testid="journey-timeline"
            >
              <div
                style="position: relative;"
                viewport="[object Object]"
                whileinview="visible"
              >
                <div
                  class="MuiBox-root css-61pg67"
                >
                  <div
                    style="position: absolute; top: 20px; left: 10%; right: 10%; height: 2px; transform-origin: left center;"
                  >
                    <div
                      class="MuiBox-root css-5mn1cg"
                    />
                  </div>
                  <div
                    aria-label="First Introduction to Computers - 2011"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-1qbfobq"
                      />
                    </div>
                    <div>
                      <span
                        class="css-u4jj8o"
                      >
                        2011
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                      >
                        First Introduction to Computers
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Built My First Website - 2015"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-1qbfobq"
                      />
                    </div>
                    <div>
                      <span
                        class="css-u4jj8o"
                      >
                        2015
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                      >
                        Built My First Website
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Started Learning to Code - 2016"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-1qbfobq"
                      />
                    </div>
                    <div>
                      <span
                        class="css-u4jj8o"
                      >
                        2016
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                      >
                        Started Learning to Code
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="First Freelance Project - 2020"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-1qbfobq"
                      />
                    </div>
                    <div>
                      <span
                        class="css-u4jj8o"
                      >
                        2020
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                      >
                        First Freelance Project
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="First Internship - 2021"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-1qbfobq"
                      />
                    </div>
                    <div>
                      <span
                        class="css-u4jj8o"
                      >
                        2021
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                      >
                        First Internship
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Started Freelancing - 2022"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-1qbfobq"
                      />
                    </div>
                    <div>
                      <span
                        class="css-u4jj8o"
                      >
                        2022
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                      >
                        Started Freelancing
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Landed My First Job - 2023"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-1qbfobq"
                      />
                    </div>
                    <div>
                      <span
                        class="css-u4jj8o"
                      >
                        2023
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
                      >
                        Landed My First Job
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiBox-root css-e03jn5"
        >
          <div>
            <div
              class="MuiBox-root css-ucbi2i"
            >
              <span
                class="scroll-ring"
              />
              <span
                class="scroll-dot"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="css-10skod6"
      data-testid="education-section"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
      >
        <div
          viewport="[object Object]"
          whileinview="[object Object]"
        >
          <h2
            class="css-k88837"
          >
            Education
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-wfrkm6-MuiTypography-root"
          >
            The foundation that shaped my thinking and technical skills.
          </p>
        </div>
        <div
          class="MuiBox-root css-1gtzesu"
        >
          <div
            viewport="[object Object]"
            whileinview="visible"
          >
            <div
              class="MuiBox-root css-1j8oeui"
            >
              <div
                class="MuiBox-root css-y8rzaa"
              >
                <span
                  class="year-text"
                >
                  2005 — 2007
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1fuyhrh-MuiTypography-root"
              >
                Primary Secondary Education
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-dqqgqi-MuiTypography-root"
              >
                Bhavans Bala Mandir, Eroor
              </p>
            </div>
          </div>
          <div
            viewport="[object Object]"
            whileinview="visible"
          >
            <div
              class="MuiBox-root css-1j8oeui"
            >
              <div
                class="MuiBox-root css-y8rzaa"
              >
                <span
                  class="year-text"
                >
                  2007 — 2019
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1fuyhrh-MuiTypography-root"
              >
                Higher Secondary Education
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-dqqgqi-MuiTypography-root"
              >
                Bhavans Vidya Mandir, Eroor
              </p>
            </div>
          </div>
          <div
            viewport="[object Object]"
            whileinview="visible"
          >
            <div
              class="MuiBox-root css-1j8oeui"
            >
              <div
                class="MuiBox-root css-y8rzaa"
              >
                <span
                  class="year-text"
                >
                  2019 — Present
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1fuyhrh-MuiTypography-root"
              >
                B.Tech in Computer Science
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-dqqgqi-MuiTypography-root"
              >
                Model Engineering College, Thrikkakara
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="css-rvkvw2"
      data-testid="experience-section"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
      >
        <div
          viewport="[object Object]"
          whileinview="[object Object]"
        >
          <h2
            class="css-k88837"
          >
            Experience
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-wfrkm6-MuiTypography-root"
          >
            A timeline of roles where I've grown, shipped, and learned.
          </p>
        </div>
        <div
          class="MuiBox-root css-1out4g5"
        >
          <div
            style="position: absolute; inset: 0; width: 100%; transform-origin: top center; pointer-events: none;"
          >
            <div
              class="MuiBox-root css-xzfthn"
            />
          </div>
          <div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-e3wyqc"
                />
                <div
                  class="MuiBox-root css-b6yup3"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1ohw2mx-MuiTypography-root"
                  >
                    Consultant Developer
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rggk9e-MuiTypography-root"
                  >
                    Thoughtworks
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-16i7t20-MuiTypography-root"
                  >
                    Jul 2023 — Present
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1xzsp8b-MuiTypography-root"
                  >
                    Working as a consultant developer building scalable enterprise applications. Contributing to backend and frontend systems using Node.js, TypeScript, and modern development practices in a collaborative agile environment.
                  </p>
                </div>
              </div>
            </div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-e3wyqc"
                />
                <div
                  class="MuiBox-root css-b6yup3"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1ohw2mx-MuiTypography-root"
                  >
                    Web Manager
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rggk9e-MuiTypography-root"
                  >
                    Excel MEC
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-16i7t20-MuiTypography-root"
                  >
                    Jun 2022 — Sep 2023
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1xzsp8b-MuiTypography-root"
                  >
                    Managed and developed the organization's web presence, maintaining websites and building new features using React.js and modern web technologies while coordinating with the web team.
                  </p>
                </div>
              </div>
            </div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-e3wyqc"
                />
                <div
                  class="MuiBox-root css-b6yup3"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1ohw2mx-MuiTypography-root"
                  >
                    Full Stack Developer (Freelance)
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rggk9e-MuiTypography-root"
                  >
                    Svasthi Charitable Trust
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-16i7t20-MuiTypography-root"
                  >
                    May 2023 — Jun 2023
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1xzsp8b-MuiTypography-root"
                  >
                    Developed the official website for Svasthi Charitable Trust using React.js and Firebase, focusing on performance, responsiveness, and maintainable frontend architecture.
                  </p>
                </div>
              </div>
            </div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-e3wyqc"
                />
                <div
                  class="MuiBox-root css-b6yup3"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1ohw2mx-MuiTypography-root"
                  >
                    Full Stack Developer (Freelance)
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rggk9e-MuiTypography-root"
                  >
                    Advantus Life Sciences
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-16i7t20-MuiTypography-root"
                  >
                    Sep 2021 — Jul 2022
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1xzsp8b-MuiTypography-root"
                  >
                    Built the official website for Advantus Life Sciences using Next.js, delivering a responsive and production-ready web platform for the organization.
                  </p>
                </div>
              </div>
            </div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-e3wyqc"
                />
                <div
                  class="MuiBox-root css-b6yup3"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1ohw2mx-MuiTypography-root"
                  >
                    Frontend Developer Intern
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rggk9e-MuiTypography-root"
                  >
                    TGH Tech
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-16i7t20-MuiTypography-root"
                  >
                    Jun 2021 — Sep 2021
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1xzsp8b-MuiTypography-root"
                  >
                    Worked on two frontend projects using React.js and Firebase, gaining experience in building responsive interfaces and collaborating in a professional development environment.
                  </p>
                </div>
              </div>
            </div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-e3wyqc"
                />
                <div
                  class="MuiBox-root css-b6yup3"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1ohw2mx-MuiTypography-root"
                  >
                    React Developer
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rggk9e-MuiTypography-root"
                  >
                    Indic Law
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-16i7t20-MuiTypography-root"
                  >
                    Nov 2020 — Mar 2021
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1xzsp8b-MuiTypography-root"
                  >
                    Developed the IndicLaw website using React.js and Material-UI, focusing on building reusable UI components and a clean, responsive interface.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="css-q3vomh"
      data-testid="philosophy-section"
    >
      <div
        class="MuiBox-root css-jc6ucu"
        variant="1"
      />
      <div
        class="MuiBox-root css-r92jjn"
        variant="2"
      />
      <div
        class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
      >
        <div>
          <div
            class="MuiBox-root css-v46l6e"
          >
            <div
              viewport="[object Object]"
              whileinview="[object Object]"
            >
              <div
                class="MuiBox-root css-32rxv4"
              />
            </div>
            <blockquote
              class="css-10ko3cr"
            >
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  Great
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  products
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  aren't
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  just
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  built.
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  They
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  are
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  carefully
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  crafted
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  through
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  empathy,
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  iteration,
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  and
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  obsession
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  with
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  detail.
                </span>
              </span>
            </blockquote>
            <div
              viewport="[object Object]"
              whileinview="[object Object]"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-n9jyln-MuiTypography-root"
              >
                — my design philosophy
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
    <footer
      class="css-1rtsoih"
      data-testid="footer"
    >
      <div
        class="MuiBox-root css-rbdmvl"
      >
        <svg
          preserveAspectRatio="none"
          style="width: 100%; height: 100%; position: absolute; top: 0px; left: 0px;"
          viewBox="0 0 1920 160"
        >
          <path
            d="M0,64 C320,120 640,20 960,80 C1280,140 1600,40 1920,96 L1920,0 L0,0 Z"
            fill="rgba(102, 187, 106, 0.03)"
          />
          <path
            d="M0,80 C320,30 640,130 960,60 C1280,10 1600,110 1920,50 L1920,0 L0,0 Z"
            fill="rgba(0, 137, 123, 0.02)"
          />
          <path
            d="M0,48 C320,100 640,10 960,72 C1280,130 1600,30 1920,88 L1920,0 L0,0 Z"
            fill="rgba(102, 187, 106, 0.015)"
          />
        </svg>
      </div>
      <div
        class="MuiBox-root css-13eu5iz"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
        >
          <div
            viewport="[object Object]"
            whileinview="visible"
          >
            <div
              class="MuiBox-root css-1c4jngl"
            >
              <div>
                <a
                  aria-label="GitHub"
                  class="css-r6b1d5"
                  data-mui-internal-clone-element="true"
                  href="https://github.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-github"
                    data-icon="github"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M173.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM252.8 8c-138.7 0-244.8 105.3-244.8 244 0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1 100-33.2 167.8-128.1 167.8-239 0-138.7-112.5-244-251.2-244zM105.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9s4.3 3.3 5.6 2.3c1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="LinkedIn"
                  class="css-r6b1d5"
                  data-mui-internal-clone-element="true"
                  href="https://linkedin.com/in/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-linkedin-in"
                    data-icon="linkedin-in"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M100.3 448l-92.9 0 0-299.1 92.9 0 0 299.1zM53.8 108.1C24.1 108.1 0 83.5 0 53.8 0 39.5 5.7 25.9 15.8 15.8s23.8-15.8 38-15.8 27.9 5.7 38 15.8 15.8 23.8 15.8 38c0 29.7-24.1 54.3-53.8 54.3zM447.9 448l-92.7 0 0-145.6c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7l0 148.1-92.8 0 0-299.1 89.1 0 0 40.8 1.3 0c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3l0 164.3-.1 0z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="X"
                  class="css-r6b1d5"
                  data-mui-internal-clone-element="true"
                  href="https://x.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-x-twitter"
                    data-icon="x-twitter"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M357.2 48L427.8 48 273.6 224.2 455 464 313 464 201.7 318.6 74.5 464 3.8 464 168.7 275.5-5.2 48 140.4 48 240.9 180.9 357.2 48zM332.4 421.8l39.1 0-252.4-333.8-42 0 255.3 333.8z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Instagram"
                  class="css-r6b1d5"
                  data-mui-internal-clone-element="true"
                  href="https://instagram.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-instagram"
                    data-icon="instagram"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M224.3 141a115 115 0 1 0 -.6 230 115 115 0 1 0 .6-230zm-.6 40.4a74.6 74.6 0 1 1 .6 149.2 74.6 74.6 0 1 1 -.6-149.2zm93.4-45.1a26.8 26.8 0 1 1 53.6 0 26.8 26.8 0 1 1 -53.6 0zm129.7 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM399 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Facebook"
                  class="css-r6b1d5"
                  data-mui-internal-clone-element="true"
                  href="https://facebook.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-facebook-f"
                    data-icon="facebook-f"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 320 512"
                  >
                    <path
                      d="M80 299.3l0 212.7 116 0 0-212.7 86.5 0 18-97.8-104.5 0 0-34.6c0-51.7 20.3-71.5 72.7-71.5 16.3 0 29.4 .4 37 1.2l0-88.7C291.4 4 256.4 0 236.2 0 129.3 0 80 50.5 80 159.4l0 42.1-66 0 0 97.8 66 0z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Reddit"
                  class="css-r6b1d5"
                  data-mui-internal-clone-element="true"
                  href="https://reddit.com/user/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-reddit-alien"
                    data-icon="reddit-alien"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M373 138.6c-25.2 0-46.3-17.5-51.9-41-30.6 4.3-54.2 30.7-54.2 62.4l0 .2c47.4 1.8 90.6 15.1 124.9 36.3 12.6-9.7 28.4-15.5 45.5-15.5 41.3 0 74.7 33.4 74.7 74.7 0 29.8-17.4 55.5-42.7 67.5-2.4 86.8-97 156.6-213.2 156.6S45.5 410.1 43 323.4c-25.4-11.9-43-37.7-43-67.7 0-41.3 33.4-74.7 74.7-74.7 17.2 0 33 5.8 45.7 15.6 34-21.1 76.8-34.4 123.7-36.4l0-.3c0-44.3 33.7-80.9 76.8-85.5 4.9-24.2 26.3-42.4 52.1-42.4 29.4 0 53.3 23.9 53.3 53.3s-23.9 53.3-53.3 53.3zM157.5 255.3c-20.9 0-38.9 20.8-40.2 47.9s17.1 38.1 38 38.1 36.6-9.8 37.8-36.9-14.7-49.1-35.7-49.1l.1 0zM395 303.1c-1.2-27.1-19.2-47.9-40.2-47.9s-36.9 22-35.7 49.1 16.9 36.9 37.8 36.9 39.3-11 38-38.1l.1 0zm-60.1 70.8c1.5-3.6-1-7.7-4.9-8.1-23-2.3-47.9-3.6-73.8-3.6s-50.8 1.3-73.8 3.6c-3.9 .4-6.4 4.5-4.9 8.1 12.9 30.8 43.3 52.4 78.7 52.4s65.8-21.6 78.7-52.4z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Goodreads"
                  class="css-r6b1d5"
                  data-mui-internal-clone-element="true"
                  href="https://goodreads.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-goodreads-g"
                    data-icon="goodreads-g"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 320 512"
                  >
                    <path
                      d="M10.8 403.3l2.8 0c12.7 0 25.5 0 38.2 .1 1.6 0 3.1-.4 3.6 2.1 7.1 34.9 30 54.6 62.9 63.9 26.9 7.6 54.1 7.8 81.3 1.8 33.8-7.4 56-28.3 68-60.4 8-21.5 10.7-43.8 11-66.5 .1-5.8 .3-47-.2-52.8l-.9-.3c-.8 1.5-1.7 2.9-2.5 4.4-22.1 43.1-61.3 67.4-105.4 69.1-103 4-169.4-57-172-176.2-.5-23.7 1.8-46.9 8.3-69.7 20.6-71.1 74.6-118.2 153.9-118.8 61.3-.4 101.5 38.7 116.2 70.3 .5 1.1 1.3 2.3 2.4 1.9l0-61.6 44.3 0c0 280.3 .1 332.2 .1 332.2-.1 78.5-26.7 143.7-103 162.2-69.5 16.9-159 4.8-196-57.2-8-13.5-11.8-28.3-13-44.5zM157.1 36.5c-52.5-.5-108.5 40.7-115 133.8-4.1 59 14.8 122.2 71.5 148.6 27.6 12.9 74.3 15 108.3-8.7 47.6-33.2 62.7-97 54.8-154-9.7-71.1-47.8-120-119.6-119.7z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Medium"
                  class="css-r6b1d5"
                  data-mui-internal-clone-element="true"
                  href="https://medium.com/@hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-medium"
                    data-icon="medium"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M369.4 32c43.4 0 78.6 35.2 78.6 78.6l0 83.8c-1.9-.1-3.8-.2-5.7-.2l-.4 0c-10 0-22.3 2.4-31.1 6.8-10 4.6-18.7 11.5-26 20.6-11.8 14.6-18.9 34.3-20.6 56.4-.1 .7-.1 1.3-.2 2s-.1 1.2-.1 1.9c-.1 1.2-.1 2.4-.1 3.6 0 1.9-.1 3.8 0 5.8 1.2 50.1 28.2 90.2 76.3 90.2 2.7 0 5.3-.1 7.9-.4l0 20.4c0 43.4-35.2 78.6-78.6 78.6L78.6 480C35.2 480 0 444.8 0 401.4L0 110.6C0 67.2 35.2 32 78.6 32l290.8 0zM82.3 138.9l.3 .1c13.2 3 19.8 7.4 19.8 23.4l0 187.2c0 16-6.7 20.4-19.9 23.4l-.3 .1 0 2.8 52.8 0 0-2.8-.3-.1c-13.2-3-19.9-7.4-19.9-23.4l0-176.3 86.1 202.5 4.9 0 88.6-208.2 0 186.6c-1.1 12.6-7.8 16.5-19.7 19.2l-.3 .1 0 2.7 91.9 0 0-2.7-.3-.1c-11.9-2.7-18.7-6.6-19.9-19.2l-.1-191.8 .1 0c0-16 6.7-20.4 19.9-23.4l.3-.1 0-2.7-72.2 0-67 157.4-67-157.4-77.8 0 0 2.7zM448 340.3c-25.1-7.4-43-35.1-41.2-67.8l0 0 41.1 0 0 67.8zm-6.4-135.6c2.3 0 4.4 .3 6.4 .9l0 57.4-40.2 0c1.5-33.6 13.6-57.9 33.8-58.3z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Pinterest"
                  class="css-r6b1d5"
                  data-mui-internal-clone-element="true"
                  href="https://pinterest.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-pinterest-p"
                    data-icon="pinterest-p"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 384 512"
                  >
                    <path
                      d="M204 6.5c-102.6 0-204 68.4-204 179.1 0 70.4 39.6 110.4 63.6 110.4 9.9 0 15.6-27.6 15.6-35.4 0-9.3-23.7-29.1-23.7-67.8 0-80.4 61.2-137.4 140.4-137.4 68.1 0 118.5 38.7 118.5 109.8 0 53.1-21.3 152.7-90.3 152.7-24.9 0-46.2-18-46.2-43.8 0-37.8 26.4-74.4 26.4-113.4 0-66.2-93.9-54.2-93.9 25.8 0 16.8 2.1 35.4 9.6 50.7-13.8 59.4-42 147.9-42 209.1 0 18.9 2.7 37.5 4.5 56.4 3.4 3.8 1.7 3.4 6.9 1.5 50.4-69 48.6-82.5 71.4-172.8 12.3 23.4 44.1 36 69.3 36 106.2 0 153.9-103.5 153.9-196.8 0-99.3-85.8-164.1-180-164.1z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Substack"
                  class="css-r6b1d5"
                  data-mui-internal-clone-element="true"
                  href="https://substack.com/@hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M22.539 8.242H1.46V5.406h21.08v2.836zM1.46 10.812V24L12 18.11 22.54 24V10.812H1.46zM22.54 0H1.46v2.836h21.08V0z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-zbil2c-MuiTypography-root"
          >
            © 
            2026
             Hemanth R. All rights reserved.
          </p>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`About Page matches snapshot (light mode) 1`] = `
<div>
  <div
    class="MuiBox-root css-0"
  >
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-cipzl4-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: none;"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular css-1h0023q-MuiToolbar-root"
      >
        <div>
          <a
            class="css-1ht0g0v"
            data-discover="true"
            href="/"
          >
            HRT
          </a>
        </div>
        <div
          class="MuiBox-root css-i9gxme"
        />
        <div
          class="MuiBox-root css-1b6rjoo"
        >
          <div
            class="css-19sk4h4"
          >
            <a
              class="css-1cm8dne"
              data-discover="true"
              href="/about"
            >
              About
            </a>
          </div>
          <div
            class="css-19sk4h4"
          >
            <a
              class="css-1cm8dne"
              data-discover="true"
              href="/blog"
            >
              Blog
            </a>
          </div>
          <div>
            <a
              class="css-1qu5wrq"
              data-discover="true"
              href="/#contact"
            >
              <span>
                Contact Me
              </span>
            </a>
          </div>
        </div>
      </div>
    </header>
    <section
      class="css-x7wijn"
      data-testid="about-hero"
    >
      <div
        class="MuiBox-root css-1hs42wd"
      >
        <div
          class="MuiBox-root css-1s9lrlc"
          variant="1"
        />
        <div
          class="MuiBox-root css-1uwv43x"
          variant="2"
        />
        <div
          class="MuiBox-root css-1vjz8a"
          variant="3"
        />
      </div>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-8y1sfv-MuiContainer-root"
      >
        <div
          style="display: flex; flex-direction: column; align-items: center;"
          viewport="[object Object]"
          whileinview="visible"
        >
          <div
            class="MuiBox-root css-1qpzi1f"
          >
            <div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-3li8h5-MuiTypography-root"
              >
                About Me
              </p>
            </div>
            <div>
              <h1
                class="css-1r6it5m"
              >
                Hi, I'm Hemanth. I design thoughtful digital experiences.
              </h1>
            </div>
            <div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-108glad-MuiTypography-root"
              >
                I’ve been fascinated by computers for as long as I can remember. What started as curiosity in a school computer lab—tinkering with HTML and exploring how websites work—quickly turned into a lifelong passion for building things with code. Over time, that curiosity grew from experimenting with small projects to developing production software and contributing to real-world products.
                <br />
                For me, software engineering is more than writing code. It’s a craft that combines problem-solving, empathy for users, and continuous learning. I enjoy building interfaces and systems that are intuitive, performant, and thoughtfully designed—products that people genuinely enjoy using.
                <br />
                <br />
                Driven by a childhood dream to work in technology, I’ve spent countless hours learning and improving my skills. Along the way I’ve worked with a variety of programming languages and technologies, including C, C++, Python, Java, and modern web development tools. These experiences have allowed me to build meaningful projects, collaborate with others, and grow as an engineer.
                <br />
                <br />
                When I’m not coding or exploring new technologies, you’ll probably find me playing football or cricket. Just like software development, these sports remind me that improvement comes through practice, persistence, and teamwork.
                <br />
                <br />
              </p>
            </div>
            <div>
              <div
                class="MuiBox-root css-1vn1sk3"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 css-ikwv0r-MuiTypography-root"
                >
                  When I'm not coding, you'll find me buried in a book. I'm an avid reader — fiction, non-fiction, philosophy, you name it. I believe reading shapes how I think and build.
                </p>
                <a
                  data-discover="true"
                  href="/books"
                  style="color: inherit; text-decoration: none;"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body2 css-3nwy5l-MuiTypography-root"
                  >
                    My Reading List
                  </span>
                </a>
              </div>
            </div>
            <div
              class="MuiBox-root css-1vamrj8"
              data-testid="journey-timeline"
            >
              <div
                style="position: relative;"
                viewport="[object Object]"
                whileinview="visible"
              >
                <div
                  class="MuiBox-root css-61pg67"
                >
                  <div
                    style="position: absolute; top: 20px; left: 10%; right: 10%; height: 2px; transform-origin: left center;"
                  >
                    <div
                      class="MuiBox-root css-i0n9dq"
                    />
                  </div>
                  <div
                    aria-label="First Introduction to Computers - 2011"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-7aohw0"
                      />
                    </div>
                    <div>
                      <span
                        class="css-wb96k3"
                      >
                        2011
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-ywpbp0-MuiTypography-root"
                      >
                        First Introduction to Computers
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Built My First Website - 2015"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-7aohw0"
                      />
                    </div>
                    <div>
                      <span
                        class="css-wb96k3"
                      >
                        2015
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-ywpbp0-MuiTypography-root"
                      >
                        Built My First Website
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Started Learning to Code - 2016"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-7aohw0"
                      />
                    </div>
                    <div>
                      <span
                        class="css-wb96k3"
                      >
                        2016
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-ywpbp0-MuiTypography-root"
                      >
                        Started Learning to Code
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="First Freelance Project - 2020"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-7aohw0"
                      />
                    </div>
                    <div>
                      <span
                        class="css-wb96k3"
                      >
                        2020
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-ywpbp0-MuiTypography-root"
                      >
                        First Freelance Project
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="First Internship - 2021"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-7aohw0"
                      />
                    </div>
                    <div>
                      <span
                        class="css-wb96k3"
                      >
                        2021
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-ywpbp0-MuiTypography-root"
                      >
                        First Internship
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Started Freelancing - 2022"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-7aohw0"
                      />
                    </div>
                    <div>
                      <span
                        class="css-wb96k3"
                      >
                        2022
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-ywpbp0-MuiTypography-root"
                      >
                        Started Freelancing
                      </p>
                    </div>
                  </div>
                  <div
                    aria-label="Landed My First Job - 2023"
                    class="MuiBox-root css-1ev1ol4"
                    role="button"
                    tabindex="0"
                  >
                    <div>
                      <div
                        class="MuiBox-root css-7aohw0"
                      />
                    </div>
                    <div>
                      <span
                        class="css-wb96k3"
                      >
                        2023
                      </span>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-ywpbp0-MuiTypography-root"
                      >
                        Landed My First Job
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiBox-root css-26utr6"
        >
          <div>
            <div
              class="MuiBox-root css-ucbi2i"
            >
              <span
                class="scroll-ring"
              />
              <span
                class="scroll-dot"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="css-162n787"
      data-testid="education-section"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
      >
        <div
          viewport="[object Object]"
          whileinview="[object Object]"
        >
          <h2
            class="css-13kw4wz"
          >
            Education
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ee07eo-MuiTypography-root"
          >
            The foundation that shaped my thinking and technical skills.
          </p>
        </div>
        <div
          class="MuiBox-root css-1gtzesu"
        >
          <div
            viewport="[object Object]"
            whileinview="visible"
          >
            <div
              class="MuiBox-root css-fg8qv"
            >
              <div
                class="MuiBox-root css-1m3or4a"
              >
                <span
                  class="year-text"
                >
                  2005 — 2007
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-125v6kj-MuiTypography-root"
              >
                Primary Secondary Education
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1jaguo5-MuiTypography-root"
              >
                Bhavans Bala Mandir, Eroor
              </p>
            </div>
          </div>
          <div
            viewport="[object Object]"
            whileinview="visible"
          >
            <div
              class="MuiBox-root css-fg8qv"
            >
              <div
                class="MuiBox-root css-1m3or4a"
              >
                <span
                  class="year-text"
                >
                  2007 — 2019
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-125v6kj-MuiTypography-root"
              >
                Higher Secondary Education
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1jaguo5-MuiTypography-root"
              >
                Bhavans Vidya Mandir, Eroor
              </p>
            </div>
          </div>
          <div
            viewport="[object Object]"
            whileinview="visible"
          >
            <div
              class="MuiBox-root css-fg8qv"
            >
              <div
                class="MuiBox-root css-1m3or4a"
              >
                <span
                  class="year-text"
                >
                  2019 — Present
                </span>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-125v6kj-MuiTypography-root"
              >
                B.Tech in Computer Science
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1jaguo5-MuiTypography-root"
              >
                Model Engineering College, Thrikkakara
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="css-22hls8"
      data-testid="experience-section"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-5c1adp-MuiContainer-root"
      >
        <div
          viewport="[object Object]"
          whileinview="[object Object]"
        >
          <h2
            class="css-13kw4wz"
          >
            Experience
          </h2>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ee07eo-MuiTypography-root"
          >
            A timeline of roles where I've grown, shipped, and learned.
          </p>
        </div>
        <div
          class="MuiBox-root css-1out4g5"
        >
          <div
            style="position: absolute; inset: 0; width: 100%; transform-origin: top center; pointer-events: none;"
          >
            <div
              class="MuiBox-root css-ur375c"
            />
          </div>
          <div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-t89bmm"
                />
                <div
                  class="MuiBox-root css-2hdeff"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ltn2f-MuiTypography-root"
                  >
                    Consultant Developer
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-19o5gyf-MuiTypography-root"
                  >
                    Thoughtworks
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ljj4-MuiTypography-root"
                  >
                    Jul 2023 — Present
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1briw2t-MuiTypography-root"
                  >
                    Working as a consultant developer building scalable enterprise applications. Contributing to backend and frontend systems using Node.js, TypeScript, and modern development practices in a collaborative agile environment.
                  </p>
                </div>
              </div>
            </div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-t89bmm"
                />
                <div
                  class="MuiBox-root css-2hdeff"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ltn2f-MuiTypography-root"
                  >
                    Web Manager
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-19o5gyf-MuiTypography-root"
                  >
                    Excel MEC
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ljj4-MuiTypography-root"
                  >
                    Jun 2022 — Sep 2023
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1briw2t-MuiTypography-root"
                  >
                    Managed and developed the organization's web presence, maintaining websites and building new features using React.js and modern web technologies while coordinating with the web team.
                  </p>
                </div>
              </div>
            </div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-t89bmm"
                />
                <div
                  class="MuiBox-root css-2hdeff"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ltn2f-MuiTypography-root"
                  >
                    Full Stack Developer (Freelance)
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-19o5gyf-MuiTypography-root"
                  >
                    Svasthi Charitable Trust
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ljj4-MuiTypography-root"
                  >
                    May 2023 — Jun 2023
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1briw2t-MuiTypography-root"
                  >
                    Developed the official website for Svasthi Charitable Trust using React.js and Firebase, focusing on performance, responsiveness, and maintainable frontend architecture.
                  </p>
                </div>
              </div>
            </div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-t89bmm"
                />
                <div
                  class="MuiBox-root css-2hdeff"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ltn2f-MuiTypography-root"
                  >
                    Full Stack Developer (Freelance)
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-19o5gyf-MuiTypography-root"
                  >
                    Advantus Life Sciences
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ljj4-MuiTypography-root"
                  >
                    Sep 2021 — Jul 2022
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1briw2t-MuiTypography-root"
                  >
                    Built the official website for Advantus Life Sciences using Next.js, delivering a responsive and production-ready web platform for the organization.
                  </p>
                </div>
              </div>
            </div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-t89bmm"
                />
                <div
                  class="MuiBox-root css-2hdeff"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ltn2f-MuiTypography-root"
                  >
                    Frontend Developer Intern
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-19o5gyf-MuiTypography-root"
                  >
                    TGH Tech
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ljj4-MuiTypography-root"
                  >
                    Jun 2021 — Sep 2021
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1briw2t-MuiTypography-root"
                  >
                    Worked on two frontend projects using React.js and Firebase, gaining experience in building responsive interfaces and collaborating in a professional development environment.
                  </p>
                </div>
              </div>
            </div>
            <div
              viewport="[object Object]"
              whileinview="visible"
            >
              <div
                class="MuiBox-root css-r8as64"
              >
                <div
                  class="MuiBox-root css-t89bmm"
                />
                <div
                  class="MuiBox-root css-2hdeff"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ltn2f-MuiTypography-root"
                  >
                    React Developer
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-19o5gyf-MuiTypography-root"
                  >
                    Indic Law
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-2ljj4-MuiTypography-root"
                  >
                    Nov 2020 — Mar 2021
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1briw2t-MuiTypography-root"
                  >
                    Developed the IndicLaw website using React.js and Material-UI, focusing on building reusable UI components and a clean, responsive interface.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="css-18ixmv"
      data-testid="philosophy-section"
    >
      <div
        class="MuiBox-root css-866s70"
        variant="1"
      />
      <div
        class="MuiBox-root css-1bg0yqu"
        variant="2"
      />
      <div
        class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
      >
        <div>
          <div
            class="MuiBox-root css-v46l6e"
          >
            <div
              viewport="[object Object]"
              whileinview="[object Object]"
            >
              <div
                class="MuiBox-root css-1al23o"
              />
            </div>
            <blockquote
              class="css-1l0t9r5"
            >
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  Great
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  products
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  aren't
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  just
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  built.
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  They
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  are
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  carefully
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  crafted
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  through
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  empathy,
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  iteration,
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  and
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  obsession
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  with
                </span>
              </span>
              <span
                viewport="[object Object]"
                whileinview="[object Object]"
              >
                <span
                  class="css-25k912"
                >
                  detail.
                </span>
              </span>
            </blockquote>
            <div
              viewport="[object Object]"
              whileinview="[object Object]"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-o5e9mu-MuiTypography-root"
              >
                — my design philosophy
              </p>
            </div>
          </div>
        </div>
      </div>
    </section>
    <footer
      class="css-1rtsoih"
      data-testid="footer"
    >
      <div
        class="MuiBox-root css-rbdmvl"
      >
        <svg
          preserveAspectRatio="none"
          style="width: 100%; height: 100%; position: absolute; top: 0px; left: 0px;"
          viewBox="0 0 1920 160"
        >
          <path
            d="M0,64 C320,120 640,20 960,80 C1280,140 1600,40 1920,96 L1920,0 L0,0 Z"
            fill="rgba(46, 125, 50, 0.03)"
          />
          <path
            d="M0,80 C320,30 640,130 960,60 C1280,10 1600,110 1920,50 L1920,0 L0,0 Z"
            fill="rgba(0, 137, 123, 0.02)"
          />
          <path
            d="M0,48 C320,100 640,10 960,72 C1280,130 1600,30 1920,88 L1920,0 L0,0 Z"
            fill="rgba(46, 125, 50, 0.015)"
          />
        </svg>
      </div>
      <div
        class="MuiBox-root css-13eu5iz"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
        >
          <div
            viewport="[object Object]"
            whileinview="visible"
          >
            <div
              class="MuiBox-root css-1c4jngl"
            >
              <div>
                <a
                  aria-label="GitHub"
                  class="css-1xdijdn"
                  data-mui-internal-clone-element="true"
                  href="https://github.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-github"
                    data-icon="github"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M173.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM252.8 8c-138.7 0-244.8 105.3-244.8 244 0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1 100-33.2 167.8-128.1 167.8-239 0-138.7-112.5-244-251.2-244zM105.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9s4.3 3.3 5.6 2.3c1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="LinkedIn"
                  class="css-1xdijdn"
                  data-mui-internal-clone-element="true"
                  href="https://linkedin.com/in/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-linkedin-in"
                    data-icon="linkedin-in"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M100.3 448l-92.9 0 0-299.1 92.9 0 0 299.1zM53.8 108.1C24.1 108.1 0 83.5 0 53.8 0 39.5 5.7 25.9 15.8 15.8s23.8-15.8 38-15.8 27.9 5.7 38 15.8 15.8 23.8 15.8 38c0 29.7-24.1 54.3-53.8 54.3zM447.9 448l-92.7 0 0-145.6c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7l0 148.1-92.8 0 0-299.1 89.1 0 0 40.8 1.3 0c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3l0 164.3-.1 0z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="X"
                  class="css-1xdijdn"
                  data-mui-internal-clone-element="true"
                  href="https://x.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-x-twitter"
                    data-icon="x-twitter"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M357.2 48L427.8 48 273.6 224.2 455 464 313 464 201.7 318.6 74.5 464 3.8 464 168.7 275.5-5.2 48 140.4 48 240.9 180.9 357.2 48zM332.4 421.8l39.1 0-252.4-333.8-42 0 255.3 333.8z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Instagram"
                  class="css-1xdijdn"
                  data-mui-internal-clone-element="true"
                  href="https://instagram.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-instagram"
                    data-icon="instagram"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M224.3 141a115 115 0 1 0 -.6 230 115 115 0 1 0 .6-230zm-.6 40.4a74.6 74.6 0 1 1 .6 149.2 74.6 74.6 0 1 1 -.6-149.2zm93.4-45.1a26.8 26.8 0 1 1 53.6 0 26.8 26.8 0 1 1 -53.6 0zm129.7 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM399 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Facebook"
                  class="css-1xdijdn"
                  data-mui-internal-clone-element="true"
                  href="https://facebook.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-facebook-f"
                    data-icon="facebook-f"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 320 512"
                  >
                    <path
                      d="M80 299.3l0 212.7 116 0 0-212.7 86.5 0 18-97.8-104.5 0 0-34.6c0-51.7 20.3-71.5 72.7-71.5 16.3 0 29.4 .4 37 1.2l0-88.7C291.4 4 256.4 0 236.2 0 129.3 0 80 50.5 80 159.4l0 42.1-66 0 0 97.8 66 0z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Reddit"
                  class="css-1xdijdn"
                  data-mui-internal-clone-element="true"
                  href="https://reddit.com/user/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-reddit-alien"
                    data-icon="reddit-alien"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M373 138.6c-25.2 0-46.3-17.5-51.9-41-30.6 4.3-54.2 30.7-54.2 62.4l0 .2c47.4 1.8 90.6 15.1 124.9 36.3 12.6-9.7 28.4-15.5 45.5-15.5 41.3 0 74.7 33.4 74.7 74.7 0 29.8-17.4 55.5-42.7 67.5-2.4 86.8-97 156.6-213.2 156.6S45.5 410.1 43 323.4c-25.4-11.9-43-37.7-43-67.7 0-41.3 33.4-74.7 74.7-74.7 17.2 0 33 5.8 45.7 15.6 34-21.1 76.8-34.4 123.7-36.4l0-.3c0-44.3 33.7-80.9 76.8-85.5 4.9-24.2 26.3-42.4 52.1-42.4 29.4 0 53.3 23.9 53.3 53.3s-23.9 53.3-53.3 53.3zM157.5 255.3c-20.9 0-38.9 20.8-40.2 47.9s17.1 38.1 38 38.1 36.6-9.8 37.8-36.9-14.7-49.1-35.7-49.1l.1 0zM395 303.1c-1.2-27.1-19.2-47.9-40.2-47.9s-36.9 22-35.7 49.1 16.9 36.9 37.8 36.9 39.3-11 38-38.1l.1 0zm-60.1 70.8c1.5-3.6-1-7.7-4.9-8.1-23-2.3-47.9-3.6-73.8-3.6s-50.8 1.3-73.8 3.6c-3.9 .4-6.4 4.5-4.9 8.1 12.9 30.8 43.3 52.4 78.7 52.4s65.8-21.6 78.7-52.4z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Goodreads"
                  class="css-1xdijdn"
                  data-mui-internal-clone-element="true"
                  href="https://goodreads.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-goodreads-g"
                    data-icon="goodreads-g"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 320 512"
                  >
                    <path
                      d="M10.8 403.3l2.8 0c12.7 0 25.5 0 38.2 .1 1.6 0 3.1-.4 3.6 2.1 7.1 34.9 30 54.6 62.9 63.9 26.9 7.6 54.1 7.8 81.3 1.8 33.8-7.4 56-28.3 68-60.4 8-21.5 10.7-43.8 11-66.5 .1-5.8 .3-47-.2-52.8l-.9-.3c-.8 1.5-1.7 2.9-2.5 4.4-22.1 43.1-61.3 67.4-105.4 69.1-103 4-169.4-57-172-176.2-.5-23.7 1.8-46.9 8.3-69.7 20.6-71.1 74.6-118.2 153.9-118.8 61.3-.4 101.5 38.7 116.2 70.3 .5 1.1 1.3 2.3 2.4 1.9l0-61.6 44.3 0c0 280.3 .1 332.2 .1 332.2-.1 78.5-26.7 143.7-103 162.2-69.5 16.9-159 4.8-196-57.2-8-13.5-11.8-28.3-13-44.5zM157.1 36.5c-52.5-.5-108.5 40.7-115 133.8-4.1 59 14.8 122.2 71.5 148.6 27.6 12.9 74.3 15 108.3-8.7 47.6-33.2 62.7-97 54.8-154-9.7-71.1-47.8-120-119.6-119.7z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Medium"
                  class="css-1xdijdn"
                  data-mui-internal-clone-element="true"
                  href="https://medium.com/@hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-medium"
                    data-icon="medium"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 448 512"
                  >
                    <path
                      d="M369.4 32c43.4 0 78.6 35.2 78.6 78.6l0 83.8c-1.9-.1-3.8-.2-5.7-.2l-.4 0c-10 0-22.3 2.4-31.1 6.8-10 4.6-18.7 11.5-26 20.6-11.8 14.6-18.9 34.3-20.6 56.4-.1 .7-.1 1.3-.2 2s-.1 1.2-.1 1.9c-.1 1.2-.1 2.4-.1 3.6 0 1.9-.1 3.8 0 5.8 1.2 50.1 28.2 90.2 76.3 90.2 2.7 0 5.3-.1 7.9-.4l0 20.4c0 43.4-35.2 78.6-78.6 78.6L78.6 480C35.2 480 0 444.8 0 401.4L0 110.6C0 67.2 35.2 32 78.6 32l290.8 0zM82.3 138.9l.3 .1c13.2 3 19.8 7.4 19.8 23.4l0 187.2c0 16-6.7 20.4-19.9 23.4l-.3 .1 0 2.8 52.8 0 0-2.8-.3-.1c-13.2-3-19.9-7.4-19.9-23.4l0-176.3 86.1 202.5 4.9 0 88.6-208.2 0 186.6c-1.1 12.6-7.8 16.5-19.7 19.2l-.3 .1 0 2.7 91.9 0 0-2.7-.3-.1c-11.9-2.7-18.7-6.6-19.9-19.2l-.1-191.8 .1 0c0-16 6.7-20.4 19.9-23.4l.3-.1 0-2.7-72.2 0-67 157.4-67-157.4-77.8 0 0 2.7zM448 340.3c-25.1-7.4-43-35.1-41.2-67.8l0 0 41.1 0 0 67.8zm-6.4-135.6c2.3 0 4.4 .3 6.4 .9l0 57.4-40.2 0c1.5-33.6 13.6-57.9 33.8-58.3z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Pinterest"
                  class="css-1xdijdn"
                  data-mui-internal-clone-element="true"
                  href="https://pinterest.com/hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-pinterest-p"
                    data-icon="pinterest-p"
                    data-prefix="fab"
                    role="img"
                    viewBox="0 0 384 512"
                  >
                    <path
                      d="M204 6.5c-102.6 0-204 68.4-204 179.1 0 70.4 39.6 110.4 63.6 110.4 9.9 0 15.6-27.6 15.6-35.4 0-9.3-23.7-29.1-23.7-67.8 0-80.4 61.2-137.4 140.4-137.4 68.1 0 118.5 38.7 118.5 109.8 0 53.1-21.3 152.7-90.3 152.7-24.9 0-46.2-18-46.2-43.8 0-37.8 26.4-74.4 26.4-113.4 0-66.2-93.9-54.2-93.9 25.8 0 16.8 2.1 35.4 9.6 50.7-13.8 59.4-42 147.9-42 209.1 0 18.9 2.7 37.5 4.5 56.4 3.4 3.8 1.7 3.4 6.9 1.5 50.4-69 48.6-82.5 71.4-172.8 12.3 23.4 44.1 36 69.3 36 106.2 0 153.9-103.5 153.9-196.8 0-99.3-85.8-164.1-180-164.1z"
                      fill="currentColor"
                    />
                  </svg>
                </a>
              </div>
              <div>
                <a
                  aria-label="Substack"
                  class="css-1xdijdn"
                  data-mui-internal-clone-element="true"
                  href="https://substack.com/@hhhrrrttt222111"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M22.539 8.242H1.46V5.406h21.08v2.836zM1.46 10.812V24L12 18.11 22.54 24V10.812H1.46zM22.54 0H1.46v2.836h21.08V0z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-xmez6a-MuiTypography-root"
          >
            © 
            2026
             Hemanth R. All rights reserved.
          </p>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
